[package]
name = "rs-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members=["prisma-cli"]
resolver = "2"

[dependencies]
serde = {version="1.0.132", features=["derive"]}
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
dotenv_codegen = "0.15"
async-trait = "0.1.68"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
chrono = "0.4.26"
phf = { version = "0.11", features = ["macros"] }
thiserror = "1.0.40"
derive_more = "0.99.17"
num = "0.4.0"

